Test cases for selfrun.sh